# real_robot_challenge

./: .gitignore  CMakeLists.txt  localization_node.py  mohit.rviz  move_square.py  package.xml  robot_controller.py
scripts/: arena.pcd  arena_old.pcd  arena_old.pgm  capture_arena.py  controller.txt  convert_map2pointcloud.py  generate_arena.py  generate_arena_xun.py  kalman_filter.py  kf.py  lidar_scan.txt  localization_node.py  mani_trajectory_execute.py  map_old.yaml  nav_goal_client.py  odom_scan.txt  robot_controller.py
scripts/utils/: arena.pcd  arena.pgm  map.yaml
utils/: generate_arena.py
