<?xml version="1.0"?>
<package format="2">
  <name>real_robot_challenge</name>
  <version>0.0.0</version>
  <description>The Real Robot Challenge package</description>
  <maintainer email="yadav171@umn.edu">Mohit Yadav</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
